# lakehouse-platform-core

./: README.md  pyproject.toml
src/lakehouse_platform_core/: __init__.py
src/lakehouse_platform_core/airflow/: __init__.py  dag_factory.py  ingestion_dag_builder.py
src/lakehouse_platform_core/cli/: ingestion.py
src/lakehouse_platform_core/connections/: __init__.py  resolver.py
src/lakehouse_platform_core/connectors/: relational.py
src/lakehouse_platform_core/ingestion/: __init__.py  bronze.py  derivation.py  loader.py  models.py  runner.py  silver.py  validator.py
src/lakehouse_platform_core/logging/: logger.py
src/lakehouse_platform_core/spark/: __init__.py  session.py
src/lakehouse_platform_core/writers/: __init__.py  iceberg.py  raw_parquet.py
